@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2012j) - ??????????
+
+* Updated to tzdata version 2012j
+  (http://mm.icann.org/pipermail/tz-announce/2012-November/000008.html).
+
+
 == Version 0.3.35 (tzdata v2012i) - 4-Nov-2012
 
 * Updated to tzdata version 2012i
